@@ -464,6 +464,7 @@ Section "Install"
     SetOutPath "$INSTDIR\pkgs"
     File __INSTALL_PY__
     File __URLS_FILE__
+    File __POST_INSTALL__
 
     @PKG_COMMANDS@
 
@@ -477,6 +478,12 @@ Section "Install"
     push '"$INSTDIR\pythonw.exe" -E -s "$INSTDIR\Lib\_nsis.py" mkmenus'
     push 'Failed to create menus'
     call AbortRetryExecWait
+
+    DetailPrint "Running post install..."
+    push '"$INSTDIR\pythonw.exe" -E -s "$INSTDIR\Lib\_nsis.py" post_install'
+    push 'Failed to run post install script'
+    call AbortRetryExecWait
+
     ${If} $Ana_AddToPath_State = ${BST_CHECKED}
         push '"$INSTDIR\pythonw.exe" -E -s "$INSTDIR\Lib\_nsis.py" addpath'
         push 'Failed to add @NAME@ to the system PATH'
